airflow-init-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-init
  labels:
    app: airflow
    component: init
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
      component: init
  template:
    metadata:
      labels:
        app: airflow
        component: init
    spec:
      volumes:
        - name: airflow-plugins
          persistentVolumeClaim:
            claimName: airflow-worker-claim1  # Corrected claimName
        - name: airflow-logs
          persistentVolumeClaim:
            claimName: airflow-worker-claim0
      containers:
        - name: airflow-main
          image: airflow090820.azurecr.io/my_airflow_custom_image:latest
          command: ["/bin/sh", "-c"]
          args: ["sleep infinity"]
          volumeMounts:
            - mountPath: /opt/airflow/
              name: airflow-claim0
            - mountPath: /opt/airflow/plugins
              name: airflow-claim1
            - mountPath: /opt/airflow/logs
              name: airflow-claim0
          securityContext:
            runAsUser: 0  # Run the container as airflow user
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: airflow-claim0
          persistentVolumeClaim:
            claimName: airflow-claim0
        - name: airflow-claim1
          persistentVolumeClaim:
            claimName: airflow-claim1
