airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: airflow-scheduler
  name: airflow-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: airflow-scheduler
    spec:
      containers:
        - args:
            - scheduler
          image: airflow090820.azurecr.io/my_airflow_custom_image:latest
          livenessProbe:
          name: airflow-scheduler
          volumeMounts:
            - mountPath: /opt/airflow/
              name: airflow-claim0
            - mountPath: /opt/airflow/plugins
              name: airflow-claim1
            - mountPath: /opt/airflow/logs
              name: airflow-claim0
          securityContext:
            runAsUser: 0  # Run the container as airflow user
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: airflow-claim0
          persistentVolumeClaim:
            claimName: airflow-claim0
        - name: airflow-claim1
          persistentVolumeClaim:
            claimName: airflow-claim1
