airflow-triggerer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-triggerer
  labels:
    io.kompose.service: airflow-triggerer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow-triggerer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: airflow-triggerer
    spec:
      containers:
        - name: airflow-triggerer
          image: airflow090820.azurecr.io/my_airflow_custom_image:latest
          args:
            - triggerer
          livenessProbe:
          volumeMounts:
            - mountPath: /opt/airflow/
              name: airflow-claim0
            - mountPath: /opt/airflow/plugins
              name: airflow-claim1
            - mountPath: /opt/airflow/logs
              name: airflow-claim0
          securityContext:
            runAsUser: 0  # Run the container as root user
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: airflow-claim0
          persistentVolumeClaim:
            claimName: airflow-claim0
        - name: airflow-claim1
          persistentVolumeClaim:
            claimName: airflow-claim1
