git-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: git-sync
  name: git-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: git-sync
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: git-sync
    spec:
      containers:
        - name: git-sync
          image: airflow090820.azurecr.io/databurst/git-sync:latest
          ports:
            - containerPort: 9418
              protocol: TCP
          volumeMounts:
            - name: airflow-dags
              mountPath: /opt/airflow/
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
      restartPolicy: Always
      volumes:
        - name: airflow-dags
          persistentVolumeClaim:
            claimName: airflow-claim0
