pgbouncer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgbouncer
  name: pgbouncer
  namespace: airflow0908
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgbouncer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: airflow090820.azurecr.io/edoburu/pgbouncer:latest
          ports:
            - containerPort: 6432
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/pgbouncer/
              subPath: pgbouncer.ini
              name: pgbouncer-claim0
            - mountPath: /etc/pgbouncer/
              subPath: userlist.txt
              name: pgbouncer-claim0
          securityContext:
            runAsUser: 0 # Ensure this matches the user ID in the container
            runAsGroup: 0 # Ensure this matches the group ID in the container
      restartPolicy: Always
      volumes:
        - name: pgbouncer-cm0
          configMap:
            name: pgbouncer-cm0
        - name: pgbouncer-claim0
          persistentVolumeClaim:
            claimName: pgbouncer-claim0
