redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: airflow090820.azurecr.io/karim0920/redis:latest
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 50
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 30
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
