git-sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: git-sync
  name: git-sync
spec:
  ports:
    - name: "9418"
      port: 9418
      targetPort: 9418
  selector:
    io.kompose.service: git-sync
