pgbouncer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pgbouncer
  name: pgbouncer
spec:
  ports:
    - name: "6432"
      port: 6432
      targetPort: 6432
  selector:
    io.kompose.service: pgbouncer
